[tool.poetry]
name = "fahrenheitblack"
version = "0.1.0"
description = "Quant Trading Suite"
authors = [
    "J. Zane Cook <90814067+jzanecook@users.noreply.github.com>",
    "Hunter Araujo <hunter_araujo@msn.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
ib-insync = "^0.9.86"
pandas = "^2.1.2"
aiohttp-retry = "^2.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
